Day-05-Kubernetes/10-Production-Grade-Kubernetes/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production-ingress
  namespace: production-demo

spec:
  ingressClassName: nginx

  rules:
    - host: production.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service
                port:
                  number: 80
